gen/24.3/rpk/rpk-group-describe.adoc
= rpk group describe
:description: rpk group describe

Describe group offset status & lag.

This command describes group members, calculates their lag, and prints detailed
information about the members.

The --regex flag (-r) parses arguments as regular expressions
and describes groups that match any of the expressions.

== Usage

[,bash]
----
rpk group describe [GROUPS...] [flags]

Examples:

Describe groups foo and bar:
  rpk group describe foo bar

Describe any group starting with f and ending in r:
  rpk group describe -r '^f.*' '.*r$'

Describe all groups:
  rpk group describe -r '*'

Describe any one-character group:
  rpk group describe -r .
----

== Flags

[cols="1m,1a,2a"]
|===
|*Value* |*Type* |*Description*

|-h, --help |- |Help for describe.

|-c, --print-commits |- |Print only the group commits section.

|-t, --print-lag-per-topic |- |Print the aggregated lag per topic.

|-s, --print-summary |- |Print only the group summary section.

|-r, --regex |- |Parse arguments as regex; describe any group that matches any input group expression.

|--config |string |Redpanda or rpk config file; default search paths are `/var/lib/redpanda/.config/rpk/rpk.yaml`, `$PWD/redpanda.yaml`, and `/etc/redpanda/redpanda.yaml`.

|-X, --config-opt |stringArray |Override rpk configuration settings; '-X help' for detail or '-X list' for terser detail.

|--profile |string |rpk profile to use.

|-v, --verbose |- |Enable verbose logging.
|===